fixed header covering content with flash messages (#1616)

--- a/scss/_teamshares.scss
+++ b/scss/_teamshares.scss
@@ -1113,7 +1113,7 @@ clipboard-copy {
 .ts-header {
   border-bottom: 1px solid;
   left: 0;
-  position: fixed;
+  position: relative;
   right: 0;
   top: 0;
   z-index: 9;
